<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="@dimen/cardElevation"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/classroom_content_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textSize="25sp"
                    android:ellipsize="end"
                    android:maxLength="15"
                    android:layout_weight="10"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/content_create_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/content_create_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:layout_weight="2"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/view_background"
                />
            <TextView
                android:id="@+id/content_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_input_text_size"
                android:text="@string/description"
                android:layout_marginTop="@dimen/input_layout_margin"
                android:textColor="@color/black"
                />



            <TextView
                android:id="@+id/content_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/link"
                android:textSize="18sp"
                android:layout_marginTop="@dimen/input_layout_margin"
                android:visibility="gone"
                android:textColor="@color/black"
                />
            <ImageView
                android:id="@+id/content_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/cross"
                android:layout_marginTop="@dimen/input_layout_margin"
                android:contentDescription="@string/app_name"
                android:visibility="gone"
                />

            <Button
                android:id="@+id/content_pdf"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="@dimen/input_layout_margin"
                android:background="@drawable/button_style"
                android:text="@string/pdf"
                android:visibility="gone"
                />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>