<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/performance_student_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="@dimen/input_text_size"
        android:textColor="@color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/performance_student_gmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gmail"
            android:textSize="@dimen/subTittle"
            android:textColor="@color/black"
            android:layout_weight="10"/>
        <TextView
            android:id="@+id/performance_student_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="@dimen/subTittle"
            android:textColor="@color/black"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/performance_student_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="@dimen/subTittle"
            android:textColor="@color/black"
            android:layout_weight="1"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/view_background"/>
    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/performance_student_Barchart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="@dimen/input_layout_margin"
        />

</LinearLayout>