<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/register_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegisterActivity"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_as"
        android:textSize="@dimen/tittle"
        android:layout_gravity="start"
        android:layout_margin="@dimen/input_layout_margin"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/register_as_teacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/input_layout_margin"
        android:text="@string/teacher"
        android:background="@drawable/button_style"
        />
    <Button
        android:id="@+id/register_as_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/input_layout_margin"
        android:text="@string/student"
        android:background="@drawable/button_style"
        />

</LinearLayout>