<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/log_in_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="@dimen/input_layout_margin"
        android:hint="@string/gmail"
        app:boxStrokeColor="@color/black"
        app:boxCornerRadiusBottomEnd="@dimen/input_layout_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/input_layout_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/input_layout_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/input_layout_corner_radius"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_gmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_input_text_size"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginLeft="@dimen/input_layout_margin"
        android:layout_marginRight="@dimen/input_layout_margin"
        android:hint="@string/password"
        app:boxStrokeColor="@color/black"
        app:boxCornerRadiusBottomEnd="@dimen/input_layout_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/input_layout_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/input_layout_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/input_layout_corner_radius"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_input_text_size"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/user_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:layout_gravity="end"
        android:layout_marginRight="@dimen/input_layout_margin"
        android:layout_marginBottom="@dimen/input_layout_margin"
        android:layout_marginEnd="@dimen/input_layout_margin" />

    <Button
        android:id="@+id/login_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_as_student"
        android:layout_marginLeft="@dimen/input_layout_margin"
        android:layout_marginRight="@dimen/input_layout_margin"
        android:background="@drawable/button_style"
        android:padding="@dimen/button_padding"
        />
    <LinearLayout
        android:layout_marginTop="@dimen/small_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/input_layout_margin"
        android:layout_marginRight="@dimen/input_layout_margin"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account"
            />
        <View
            android:layout_width="5dp"
            android:layout_height="0dp"/>
        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/register"
            />
    </LinearLayout>

</LinearLayout>